@@ -1690,10 +1690,18 @@ SEXP attribute_hidden do_for(SEXP call, SEXP op, SEXP args, SEXP rho)
         PROTECT(val = tmp);
     }
 
-    if (isList(val) || isNull(val))
+    if (isObject(val))
+    {
+        n = (int)dispatch_length(val, call, rho);
+    }
+    else if (isList(val) || isNull(val))
+    {
         n = length(val);
+    }
     else
+    {
         n = LENGTH(val);
+    }
 
     val_type = TYPEOF(val);
 
@@ -1739,35 +1747,42 @@ SEXP attribute_hidden do_for(SEXP call, SEXP op, SEXP args, SEXP rho)
             break;
 
         default:
-
-            switch (val_type)
+            if (isObject(val))
             {
-            case LGLSXP:
-                ALLOC_LOOP_VAR(v, val_type, vpi);
-                LOGICAL(v)[0] = LOGICAL(val)[i];
-                break;
-            case INTSXP:
-                ALLOC_LOOP_VAR(v, val_type, vpi);
-                INTEGER(v)[0] = INTEGER(val)[i];
-                break;
-            case REALSXP:
-                ALLOC_LOOP_VAR(v, val_type, vpi);
-                REAL(v)[0] = REAL(val)[i];
-                break;
-            case CPLXSXP:
-                ALLOC_LOOP_VAR(v, val_type, vpi);
-                COMPLEX(v)[0] = COMPLEX(val)[i];
-                break;
-            case STRSXP:
-                ALLOC_LOOP_VAR(v, val_type, vpi);
-                SET_STRING_ELT(v, 0, STRING_ELT(val, i));
-                break;
-            case RAWSXP:
-                ALLOC_LOOP_VAR(v, val_type, vpi);
-                RAW(v)[0] = RAW(val)[i];
-                break;
-            default:
-                errorcall(call, _("invalid for() loop sequence"));
+                REPROTECT(v = dispatch_subset2(val, i, call, rho), vpi);
+                INCREMENT_NAMED(v);
+            }
+            else
+            {
+                switch (val_type)
+                {
+                case LGLSXP:
+                    ALLOC_LOOP_VAR(v, val_type, vpi);
+                    LOGICAL(v)[0] = LOGICAL(val)[i];
+                    break;
+                case INTSXP:
+                    ALLOC_LOOP_VAR(v, val_type, vpi);
+                    INTEGER(v)[0] = INTEGER(val)[i];
+                    break;
+                case REALSXP:
+                    ALLOC_LOOP_VAR(v, val_type, vpi);
+                    REAL(v)[0] = REAL(val)[i];
+                    break;
+                case CPLXSXP:
+                    ALLOC_LOOP_VAR(v, val_type, vpi);
+                    COMPLEX(v)[0] = COMPLEX(val)[i];
+                    break;
+                case STRSXP:
+                    ALLOC_LOOP_VAR(v, val_type, vpi);
+                    SET_STRING_ELT(v, 0, STRING_ELT(val, i));
+                    break;
+                case RAWSXP:
+                    ALLOC_LOOP_VAR(v, val_type, vpi);
+                    RAW(v)[0] = RAW(val)[i];
+                    break;
+                default:
+                    errorcall(call, _("invalid for() loop sequence"));
+                }
             }
             if (CAR(cell) == R_UnboundValue || !SET_BINDING_VALUE(cell, v))
                 defineVar(sym, v, rho);
@@ -5750,7 +5765,9 @@ static SEXP bcEval(SEXP body, SEXP rho, Rboolean useCache)
             }
             else
 #endif
-                if (isVector(seq))
+                if (isObject(seq))
+                INTEGER(value)[1] = (int)dispatch_length(seq, body, rho);
+            else if (isVector(seq))
                 INTEGER(value)[1] = LENGTH(seq);
             else if (isList(seq) || isNull(seq))
                 INTEGER(value)[1] = length(seq);
@@ -5794,55 +5811,63 @@ static SEXP bcEval(SEXP body, SEXP rho, Rboolean useCache)
                 Rboolean iscompact = FALSE;
                 SEXP seq = getForLoopSeq(-4, &iscompact);
                 SEXP cell = GETSTACK(-3);
-                switch (TYPEOF(seq))
+                if (isObject(seq))
                 {
-                case LGLSXP:
-                    GET_VEC_LOOP_VALUE(value, -1);
-                    LOGICAL(value)[0] = LOGICAL(seq)[i];
-                    break;
-                case INTSXP:
-                    GET_VEC_LOOP_VALUE(value, -1);
-#ifdef COMPACT_INTSEQ
-                    if (iscompact)
+                    value = dispatch_subset2(seq, i, body, rho);
+                    INCREMENT_NAMED(value);
+                }
+                else
+                {
+                    switch (TYPEOF(seq))
                     {
-                        int *info = INTEGER(seq);
-                        int n1 = info[0];
-                        int n2 = info[1];
-                        int val = n1 <= n2 ? n1 + i : n1 - i;
-                        INTEGER(value)[0] = val;
-                    }
-                    else
+                    case LGLSXP:
+                        GET_VEC_LOOP_VALUE(value, -1);
+                        LOGICAL(value)[0] = LOGICAL(seq)[i];
+                        break;
+                    case INTSXP:
+                        GET_VEC_LOOP_VALUE(value, -1);
+#ifdef COMPACT_INTSEQ
+                        if (iscompact)
+                        {
+                            int *info = INTEGER(seq);
+                            int n1 = info[0];
+                            int n2 = info[1];
+                            int val = n1 <= n2 ? n1 + i : n1 - i;
+                            INTEGER(value)[0] = val;
+                        }
+                        else
 #endif
-                        INTEGER(value)[0] = INTEGER(seq)[i];
-                    break;
-                case REALSXP:
-                    GET_VEC_LOOP_VALUE(value, -1);
-                    REAL(value)[0] = REAL(seq)[i];
-                    break;
-                case CPLXSXP:
-                    GET_VEC_LOOP_VALUE(value, -1);
-                    COMPLEX(value)[0] = COMPLEX(seq)[i];
-                    break;
-                case STRSXP:
-                    GET_VEC_LOOP_VALUE(value, -1);
-                    SET_STRING_ELT(value, 0, STRING_ELT(seq, i));
-                    break;
-                case RAWSXP:
-                    GET_VEC_LOOP_VALUE(value, -1);
-                    RAW(value)[0] = RAW(seq)[i];
-                    break;
-                case EXPRSXP:
-                case VECSXP:
-                    value = VECTOR_ELT(seq, i);
-                    SET_NAMED(value, 2);
-                    break;
-                case LISTSXP:
-                    value = CAR(seq);
-                    SETSTACK(-4, CDR(seq));
-                    SET_NAMED(value, 2);
-                    break;
-                default:
-                    error(_("invalid sequence argument in for loop"));
+                            INTEGER(value)[0] = INTEGER(seq)[i];
+                        break;
+                    case REALSXP:
+                        GET_VEC_LOOP_VALUE(value, -1);
+                        REAL(value)[0] = REAL(seq)[i];
+                        break;
+                    case CPLXSXP:
+                        GET_VEC_LOOP_VALUE(value, -1);
+                        COMPLEX(value)[0] = COMPLEX(seq)[i];
+                        break;
+                    case STRSXP:
+                        GET_VEC_LOOP_VALUE(value, -1);
+                        SET_STRING_ELT(value, 0, STRING_ELT(seq, i));
+                        break;
+                    case RAWSXP:
+                        GET_VEC_LOOP_VALUE(value, -1);
+                        RAW(value)[0] = RAW(seq)[i];
+                        break;
+                    case EXPRSXP:
+                    case VECSXP:
+                        value = VECTOR_ELT(seq, i);
+                        SET_NAMED(value, 2);
+                        break;
+                    case LISTSXP:
+                        value = CAR(seq);
+                        SETSTACK(-4, CDR(seq));
+                        SET_NAMED(value, 2);
+                        break;
+                    default:
+                        error(_("invalid sequence argument in for loop"));
+                    }
                 }
                 if (CAR(cell) == R_UnboundValue || !SET_BINDING_VALUE(cell, value))
                     defineVar(BINDING_SYMBOL(cell), value, rho);
